--- a/src/styles/technology.css
+++ b/src/styles/technology.css
@@ -3,7 +3,7 @@
   padding: var(--spacing-40) 0 var(--spacing-36) 0;
   position: relative;
   overflow: hidden;
-  background-color: var(--light-gray);
+  background-color: var(--white);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
